--- a/src/latex/Config.tex
+++ b/src/latex/Config.tex
@@ -1,5 +1,11 @@
-\graphicspath{img/}
+\graphicspath{{img/}}
 \usemintedstyle{manni}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
 \makeatletter
 \let\titulo\@title
 \let\autor\@author
