--- a/src/latex/Imports.tex
+++ b/src/latex/Imports.tex
@@ -15,9 +15,9 @@
 \usepackage{graphicx}
 \usepackage{fancyhdr}
 \usepackage{blindtext}
-\usepackage[dvipsnames]{xcolor}
+\usepackage{xcolor}
 \usepackage{minted}
 \usepackage{exercise}
-% \usepackage{hyperref}
+\usepackage{hyperref}
 % \usepackage{multicol}
 % \usepackage{caption}
