--- a/src/latex/Contenido/ejercicios.tex
+++ b/src/latex/Contenido/ejercicios.tex
@@ -10,4 +10,10 @@
   La definición completa de las reglas del juego se pueden encontrar en 
   \url{https://img.yugioh-card.com/uk/rulebook/Rulebook_v9_en.pdf}
 %
-\subimport{Patrones/}{Template.tex} 
+\subimport{Ejercicios/}{Template.tex} 
+\subimport{Ejercicios/}{NullObject.tex}
+
+\section{Soluciones}
+  \subimport{Soluciones/}{Template.tex}
+  \subimport{Soluciones/}{NullObject.tex}
+%
