--- a/src/latex/Definitions.tex
+++ b/src/latex/Definitions.tex
@@ -12,4 +12,7 @@
 %%  País de escritura del informe
 \newcommand{\pais}{Chile}
 
+\newcommand{\java}[1]{
+  \mintinline{java}{#1}
+}
 \definecolor{LightGray}{gray}{0.9}
