--- a/src/latex/Contenido/ejercicios.tex
+++ b/src/latex/Contenido/ejercicios.tex
@@ -12,7 +12,9 @@
 %
 \subimport{Ejercicios/}{Template.tex} 
 \subimport{Ejercicios/}{NullObject.tex}
+\subimport{Ejercicios/}{Composite.tex}
 
+\pagebreak
 \section{Soluciones}
   \subimport{Soluciones/}{Template.tex}
   \subimport{Soluciones/}{NullObject.tex}
