--- a/src/latex/Contenido/Ejercicios/NullObject.tex
+++ b/src/latex/Contenido/Ejercicios/NullObject.tex
@@ -1,11 +1,15 @@
 \section{Null Object}
-  \begin{Exercise}[title={Efectos}, label={ex:null-1}]
+  \begin{Exercise}[title={Efectos}, label={ex:null-1}, difficulty=1]
     Además de los tipos ya definidos, todas las cartas de hechizos tienen efectos, y las 
     cartas de monstruos pueden o no tener algún efecto.
     Extienda la implementación para permitir esta mecánica.
   \end{Exercise}
 
-  \begin{Exercise}[title={Efectos específicos (Propuesto)}, label={ex:null-2}]
+  \begin{Exercise}[
+      title={Efectos específicos (Propuesto)}, 
+      label={ex:null-2}, 
+      difficulty=3
+    ]
     Actualmente la implementación tiene efectos pero estos no hacen mucho.
     Considere los siguientes efectos específicos:
     \begin{itemize}
