--- a/src/latex/Contenido/Ejercicios/Template.tex
+++ b/src/latex/Contenido/Ejercicios/Template.tex
@@ -1,5 +1,5 @@
 \section{Template method}
-  \begin{Exercise}[title={Zonas de juego}, label={ex:template-1}]
+  \begin{Exercise}[title={Zonas de juego}, label={ex:template-1}, difficulty=1]
     Si bien existen muchas diferencias entre estos dos tipos de cartas, por ahora 
     consideraremos que solo se diferencian en la zona del campo en la que son jugadas.
 
@@ -7,7 +7,11 @@
     correspondiente siguiendo buenas metodologías de diseño.
   \end{Exercise}
 
-  \begin{Exercise}[title={Niveles de monstruos}, label={ex:template-2}]
+  \begin{Exercise}[
+      title={Niveles de monstruos}, 
+      label={ex:template-2}, 
+      difficulty=1
+    ]
     Además de los tipos de cartas del ejercicio \ref{ex:template-1} se tienen distintos 
     niveles de monstruos que requerirán sacrificios para ser jugados.
     Los niveles son:
@@ -20,7 +24,11 @@
     Modifique el código para permitir esta mecánica.
   \end{Exercise}
 
-  \begin{Exercise}[title={Invocaciones de monstruos (Propuesto)}, label={ex:template-3}]
+  \begin{Exercise}[
+      title={Invocaciones de monstruos (Propuesto)}, 
+      label={ex:template-3}, 
+      difficulty=2
+    ]
     Extienda el código anterior para permitir dos tipos de invocaciones de monstruos, en
     modo de defensa boca abajo y boca arriba en modo de ataque.
   \end{Exercise}
