--- a/src/latex/Contenido/ejercicios.tex
+++ b/src/latex/Contenido/ejercicios.tex
@@ -18,4 +18,5 @@
 \section{Soluciones}
   \subimport{Soluciones/}{Template.tex}
   \subimport{Soluciones/}{NullObject.tex}
+  \subimport{Soluciones/}{Composite.tex}
 %
