--- a/src/latex/Contenido/ejercicios.tex
+++ b/src/latex/Contenido/ejercicios.tex
@@ -13,6 +13,7 @@
 \subimport{Ejercicios/}{Template.tex} 
 \subimport{Ejercicios/}{NullObject.tex}
 \subimport{Ejercicios/}{Composite.tex}
+\subimport{Ejercicios/}{Singleton.tex}
 
 \pagebreak
 \section{Soluciones}
