--- a/src/latex/Contenido/Ejercicios/Singleton.tex
+++ b/src/latex/Contenido/Ejercicios/Singleton.tex
@@ -10,4 +10,13 @@
     Modifique la implementación para asegurarse de que no se pueda tener más de una 
     instancia de efectos nulos.
   \end{Exercise}
+
+  \begin{Exercise}[
+    title={Extender otros efectos}, 
+    label={ex:singleton-2}, 
+    difficulty=2
+  ]
+  Extienda la implementación del ejercicio \ref{ex:null-2} para que utilice
+  \textit{singleton pattern}.
+\end{Exercise}
 %
