--- a/src/latex/Contenido/ejercicios.tex
+++ b/src/latex/Contenido/ejercicios.tex
@@ -20,4 +20,6 @@
   \subimport{Soluciones/}{Template.tex}
   \subimport{Soluciones/}{NullObject.tex}
   \subimport{Soluciones/}{Composite.tex}
+  \subimport{Soluciones/}{Singleton.tex}
+
 %
