--- a/src/latex/Contenido/Ejercicios/Composite.tex
+++ b/src/latex/Contenido/Ejercicios/Composite.tex
@@ -29,6 +29,6 @@
     Extienda el código para agregar esta mecánica:
 
     \textbf{¡CUIDADO!} Si se implementa de la misma manera que en el ejercicio anterior se
-    caería en una referencia circular.
+    puede caer en referencias circulares (por ejemplo si hay 2 cartas de campo en juego).
   \end{Exercise}
 %
