--- a/src/latex/Contenido/Soluciones/Singleton.tex
+++ b/src/latex/Contenido/Soluciones/Singleton.tex
@@ -9,7 +9,7 @@
   \begin{minted}[autogobble, bgcolor=LightGray]{java}
     // com.github.islaterm.yugi.effect.NullEffect
     public class NullEffect implements IEffect {
-      private IEffect instance;
+      private static IEffect instance;
 
       private NullEffect() {
       }
@@ -18,8 +18,8 @@
       public void use() {
         System.out.println("No hago nada :D");
       }
-      
-      public IEffect getInstance() {
+
+      public static IEffect getInstance() {
         if (instance == null) {
           instance = new NullEffect();
         }
