--- a/src/latex/Contenido/ejercicios.tex
+++ b/src/latex/Contenido/ejercicios.tex
@@ -14,6 +14,7 @@
 \subimport{Ejercicios/}{NullObject.tex}
 \subimport{Ejercicios/}{Composite.tex}
 \subimport{Ejercicios/}{Singleton.tex}
+\subimport{Ejercicios/}{Flyweight.tex}
 
 \pagebreak
 \section{Soluciones}
@@ -21,5 +22,7 @@
   \subimport{Soluciones/}{NullObject.tex}
   \subimport{Soluciones/}{Composite.tex}
   \subimport{Soluciones/}{Singleton.tex}
+  \pagebreak
+  \subimport{Soluciones/}{Flyweight.tex}
 
 %
