Lo que se hizo en la auxiliar

--- a/src/latex/Contenido/Soluciones/NullObject.tex
+++ b/src/latex/Contenido/Soluciones/NullObject.tex
@@ -23,7 +23,7 @@
 
   Ahora, podemos implementar los efectos concretos:
   \begin{minted}[autogobble, bgcolor=LightGray]{java}
-    // com.github.islaterm.yugi.effect.Effect
+    // com.github.islaterm.yugi.effect.AbstractEffect
     public class Effect implements IEffect {
       @Override
       public void use() {
