--- a/src/latex/Contenido/Soluciones/Flyweight.tex
+++ b/src/latex/Contenido/Soluciones/Flyweight.tex
@@ -9,7 +9,7 @@
   crearlos de nuevo, estaremos utilizando \textit{flyweight factory pattern}.
 
   \begin{minted}[autogobble, bgcolor=LightGray]{java}
-    // com.github.islaterm.yugi.effect.FlyweightEffectFactory
+    // com.github.islaterm.yugi.model.effect.FlyweightEffectFactory
     public class FlyweightEffectFactory {
       private Map<String, IEffect> createdEffects = new HashMap<>();
 
