--- a/src/latex/Contenido/Soluciones/Composite.tex
+++ b/src/latex/Contenido/Soluciones/Composite.tex
@@ -10,9 +10,9 @@
   agregarle un método que pueda recorrer el árbol, así:
 
   \begin{minted}[autogobble, bgcolor=LightGray]{java}
-    // com.github.islaterm.yugi.card.ICard
+    // com.github.islaterm.yugi.model.card.ICard
     void applyEquippedEffects();
-    // com.github.islaterm.yugi.card.AbstractCard
+    // com.github.islaterm.yugi.model.card.AbstractCard
     protected Set<ICard> equippedCards = new HashSet<>();
 
     @Override
