--- a/src/latex/Contenido/Soluciones/Singleton.tex
+++ b/src/latex/Contenido/Soluciones/Singleton.tex
@@ -7,7 +7,7 @@
 
   Modifiquemos la clase \java{NullEffect} para que sea un \textit{singleton}.
   \begin{minted}[autogobble, bgcolor=LightGray]{java}
-    // com.github.islaterm.yugi.effect.NullEffect
+    // com.github.islaterm.yugi.model.effect.NullEffect
     public class NullEffect implements IEffect {
       private static IEffect instance;
 
